# FinanceBot

./: .env  config.py  main.py  pyproject.toml
app/: handlers.py  keyboards.py
app/database/: config.py
app/database/models/: base.py
app/handlers/: user_handler.py  user_reg.py
app/keyboards/: aboutme_kb.py  main_kb.py  products_kb.py
